Implement transparent modal-based authentication
   - Create UserSession Vue component for reactive navbar auth status
   - Add modal login/register flow with backdrop and shared state
   - Update AuthForm to emit success events for seamless modal closure
   - Implement transparent logout by removing hard redirects in useAuth
   - Move Vue mount point to wrap header for global component support
   - Register UserSession in component registry and update secondary nav partial

--- a/app/views/layouts/_secondary_nav.html.erb
+++ b/app/views/layouts/_secondary_nav.html.erb
@@ -6,14 +6,6 @@
     </div>
 
     <!-- Right: Register/Login -->
-    <div class="flex space-x-4">
-      <% if authenticated? %>
-        <span>Willkommen, <%= Current.user.username %></span>
-        <%= button_to "Logout", session_path, method: :delete, class: "hover:underline bg-transparent border-0 p-0 text-cs-gold cursor-pointer" %>
-      <% else %>
-        <%= link_to "Login", new_session_path, class: "hover:underline" %>
-        <%= link_to "Registrieren", new_registration_path, class: "hover:underline" %>
-      <% end %>
-    </div>
+    <user-session></user-session>
   </div>
 </div>
