--- a/app/frontend/entrypoints/application.css
+++ b/app/frontend/entrypoints/application.css
@@ -3,6 +3,10 @@
 @theme {
   --color-cs-dark-red: #360D0C;
   --color-cs-gold: #CBB859;
+  
+  --color-cs-success: #16a34a;
+  --color-cs-warning: #ca8a04;
+  --color-cs-error: #dc2626;
 }
 
 /* Base Components */
@@ -11,15 +15,15 @@
 }
 
 @utility btn-primary {
-  @apply bg-cs-dark-red text-white hover:opacity-90;
+  @apply bg-cs-dark-red text-white hover:opacity-80;
 }
 
 @utility btn-gold {
-  @apply bg-cs-gold text-cs-dark-red hover:opacity-90;
+  @apply bg-cs-gold text-cs-dark-red hover:opacity-80;
 }
 
 @utility btn-outline {
-  @apply border-2 border-cs-dark-red text-cs-dark-red hover:bg-cs-dark-red hover:text-white;
+  @apply border-2 border-cs-dark-red text-cs-dark-red hover:bg-cs-dark-red hover:text-white hover:opacity-80;
 }
 
 @utility btn-sm {
@@ -32,6 +36,14 @@
 
 @utility label-field {
   @apply block text-sm font-medium text-gray-700 mb-1;
+}
+
+@utility link {
+  @apply text-cs-dark-red hover:opacity-80 transition cursor-pointer;
+}
+
+@utility link-underline {
+  @apply link underline;
 }
 
 /* Tailwind 4 scans files for classes. */
