--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <%= vite_stylesheet_tag 'application' %>
 
     <% authenticated? %>
-    <meta name="current-user" content="<%= (Current.user ? Current.user.as_json(only: [:id, :email_address]) : nil).to_json %>">
+    <meta name="current-user" content="<%= (Current.user ? Current.user.as_json(only: [:id, :email_address, :username]) : nil).to_json %>">
   </head>
 
   <body>
