--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,15 @@
 <h1><%= @recipe.title %></h1>
 
+<div class="mb-6">
+  <rating-control 
+    rateable-type="Recipe" 
+    :rateable-id="<%= @recipe.id %>" 
+    :initial-average="<%= @recipe.average_rating || 0 %>"
+    :initial-count="<%= @recipe.ratings_count || 0 %>"
+    :user-rating="<%= (Current.user && @recipe.ratings.find_by(user: Current.user)&.score) || 'null' %>"
+  ></rating-control>
+</div>
+
 <p>
   <strong>Autor:</strong> <%= @recipe.user.username %>
 </p>
