--- a/app/views/recipe_images/index.html.erb
+++ b/app/views/recipe_images/index.html.erb
@@ -31,6 +31,6 @@
   </div>
 
   <div class="mt-8 flex justify-center">
-    <%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+    <%== @pagy.series_nav if @pagy.pages > 1 %>
   </div>
 </div>
