--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="flex justify-center mb-6">
-  <%== pagy_nav(@pagy) %>
+  <%== @pagy.series_nav %>
 </div>
 
 <div class="table-container mb-6">
@@ -69,5 +69,5 @@
 </div>
 
 <div class="flex justify-center py-4">
-  <%== pagy_nav(@pagy) %>
+  <%== @pagy.series_nav %>
 </div>
