--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -54,8 +54,8 @@
     <h2>Kommentare</h2>
     <% @recipe.recipe_comments.each do |comment| %>
       <div class="comment">
-        <p>
-          <strong><%= comment.user&.username || "Gast" %></strong> 
+        <p class="flex items-center gap-2">
+          <%= user_badge(comment.user) %>
           <small><%= l comment.created_at, format: :short %></small>
         </p>
         <%= simple_format comment.body %>
